# codex-nes-emulator

./: .gitignore  NESDoc.txt  README.md  pyproject.toml  run_nes.py  run_test_roms.py  setup.py
.venv312/: pyvenv.cfg
nintendo_sim/: __init__.py  apu.py  bus.py  controller.py  cpu.py  mapper.py  nes.py  palette.py  ppu.py  ppu_backend.py  ppu_cython.pyx  rom.py
profiling/: bench_smb.py  smb_cprofile.pstats  smb_pyinstrument.txt  smb_speedscope.json
