[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nintendo-sim"
version = "0.1.0"
description = "Python NES emulator with optional Cython PPU acceleration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pygame>=2.5.2"]

[tool.setuptools.packages.find]
include = ["nintendo_sim*"]
